EVA-242 feat: Se agrega al view del reporte de eficiencia de la grafica la generación de las listas que tendrán las coordenadas filtradas por el rango de fechas seleccionado por el usuario del progreso estimado y real y retornaran al Js para graficarse.
fix: Se corrige el permiso del icono para cerrar/reabrir una actividad para que no se muestre a los responsables.
feat: Se agrega a la url para enviar datos por ajax al view el id del grupo.
feat: Se agrega en el Js el filtrado del rango de fechas por defecto de la grafica y se agrega el filtrado del rango de fechas elegido por el usuario.

--- a/GestionActividades/templates/GestionActividades/Actividades/Index.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/Index.html
@@ -259,7 +259,7 @@
                                                                                             </div>
                                                                                         {% endif %}
                                                                                     {% endif %}
-                                                                                    {% if perms.GestionActividades.change_actividad %}
+                                                                                    {% if perms.TalentoHumano.permission_director_proceso or perms.TalentoHumano.permission_gerencial %}
                                                                                         {% if actividad.estado == EstadosActividades.FINALIZADO or actividad.estado == EstadosActividades.CERRADA or actividad.estado == EstadosActividades.REABIERTA%}
                                                                                             <div class="col-md-2">
                                                                                                 <small>
