--- a/GestionActividades/templates/GestionActividades/GruposActividades/_reporte_eficiencia_grupos_actividades_index.html
+++ b/GestionActividades/templates/GestionActividades/GruposActividades/_reporte_eficiencia_grupos_actividades_index.html
@@ -75,17 +75,17 @@
                                     <thead class="bg-primary-600">
                                     <tr>
                                         <th data-priority="1">Número Actividades</th>
-                                        <th>Promedio Tiempo Estimado</th>
-                                        <th>Promedio Tiempo Invertido</th>
+                                        <th>Promedio Tiempo Estimado (Horas)</th>
+                                        <th>Promedio Tiempo Invertido (Horas)</th>
                                         <th>Promedio Porcentaje Avance</th>
                                     </tr>
                                     </thead>
                                     <tbody class="text-center">
                                     <tr>
-                                        <td>{{ actividades_en_proceso }} Actividades</td>
-                                        <td>{{ pte_actividades_en_proceso }} Horas</td>
-                                        <td>{{ pti_actividades_en_proceso }} Horas</td>
-                                        <td>{{ ppa_actividades_en_proceso }} %</td>
+                                        <td>{{ actividades_en_proceso }} </td>
+                                        <td>{{ pte_actividades_en_proceso }} </td>
+                                        <td>{{ pti_actividades_en_proceso }} </td>
+                                        <td>{{ ppa_actividades_en_proceso }} </td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -99,18 +99,18 @@
                                     <tr>
                                         <th data-priority="1">Número Actividades</th>
                                         <th>Número Actividades dentro del Tiempo Estimado</th>
-                                        <th>Promedio Tiempo Estimado</th>
-                                        <th>Promedio Tiempo Invertido</th>
+                                        <th>Promedio Tiempo Estimado (Horas)</th>
+                                        <th>Promedio Tiempo Invertido (Horas)</th>
                                         <th>Porcentaje Eficiencia</th>
                                     </tr>
                                     </thead>
                                     <tbody class="text-center">
                                     <tr>
-                                        <td>{{ actividades_cerradas }} Actividades</td>
-                                        <td>{{ adte_actividades_cerradas }} Actividades</td>
-                                        <td>{{ pte_actividades_cerradas }} Horas</td>
-                                        <td>{{ pti_actividades_cerradas }} Horas</td>
-                                        <td>{{ pe_actividades_cerradas }} %</td>
+                                        <td>{{ actividades_cerradas }} </td>
+                                        <td>{{ adte_actividades_cerradas }} </td>
+                                        <td>{{ pte_actividades_cerradas }} </td>
+                                        <td>{{ pti_actividades_cerradas }} </td>
+                                        <td>{{ pe_actividades_cerradas }} </td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -139,10 +139,6 @@
     <script src="{% static 'EVA/Plantilla/js/dependency/moment/moment.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-daterangepicker/bootstrap-daterangepicker.js' %}"></script>
     <script>
-        var coordenadas_tiempo_estimado = unescapep('{{  coordenadas_tiempo_estimado }}').replaceAll("'", "\"");
-        coordenadas_tiempo_estimado = JSON.parse(coordenadas_tiempo_estimado);
-
-        var coordenadas_tiempo_real = unescapep('{{  coordenadas_tiempo_real }}').replaceAll("'", "\"");
-        coordenadas_tiempo_real = JSON.parse(coordenadas_tiempo_real);
+        var grupoID = {{ grupo_actividad.id }}
     </script>
 {% endblock scripts %}
