EVA-247 fix: Se soluciona problema que en los index de consecutivos que tienen realción con contratos de clientes se visaulizaba  dos veces el nombre del cliente.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -65,7 +65,7 @@
                                                         </td>
                                                         <td>{{ consecutivo.fecha | date:'Y-m-d H:i'}}</td>
                                                         <td>{% if consecutivo.contrato %}
-                                                                {{ consecutivo.contrato}} - {{ consecutivo.contrato.cliente }}
+                                                                {{ consecutivo.contrato}}
                                                             {% else %}
                                                                 {% for col in colaborador %}
                                                                     {% if col.usuario_id == consecutivo.usuario.id %}
