--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOrdenesTrabajo/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOrdenesTrabajo/index.html
@@ -74,7 +74,7 @@
                                                             {% endif %}
                                                         </td>
                                                         <td>{% if consecutivo.contrato %}
-                                                                {{ consecutivo.contrato}} - {{ consecutivo.contrato.cliente }}
+                                                                {{ consecutivo.contrato}}
                                                             {% else %}
                                                                 {% for col in colaborador %}
                                                                     {% if col.usuario_id == consecutivo.usuario.id %}
