--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoRequerimientos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoRequerimientos/index.html
@@ -63,7 +63,7 @@
                                                         </td>
                                                         <td>{{ consecutivo.fecha_creacion | date:'Y-m-d H:i'}}</td>
                                                         <td>{% if consecutivo.contrato %}
-                                                                {{ consecutivo.contrato}} - {{ consecutivo.contrato.cliente }}
+                                                                {{ consecutivo.contrato}}
                                                             {% else %}
                                                                 {% for col in colaborador %}
                                                                     {% if col.usuario_id == consecutivo.usuario.id %}
