--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOrdenesTrabajo/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOrdenesTrabajo/index.html
@@ -24,7 +24,7 @@
 
                         <div class="panel-hdr">
                             <h2 class="small">
-                                {% if  perms.GestionDocumental.add_ordenestrabajo %}
+                                {% if  perms.GestionDocumental.add_consecutivoordenestrabajo %}
                                     <span class="fad fa-2x fa-plus-circle cursor-pointer" onclick="abrirModalCrear('{% url 'GestionDocumental:consecutivo-ordenestrabajo-crear' 0%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar consecutivo de orden de trabajo">
                                     </span>
                                 {% endif %}
@@ -96,13 +96,13 @@
                                                         </td>
 
                                                         <td>
-                                                            {% if perms.GestionDocumental.change_ordenestrabajo and consecutivo.estado %}
+                                                            {% if perms.GestionDocumental.change_consecutivoordenestrabajo and consecutivo.estado %}
                                                               <a class="fad fa-2x fa-file-edit" id="editar_{{ consecutivo.id }}" href="javascript:abrirModalCrear('{% url 'GestionDocumental:consecutivo-ordenestrabajo-editar' consecutivo.id%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
                                                             {% endif %}
-                                                            {% if perms.GestionDocumental.delete_ordenestrabajo and consecutivo.estado %}
+                                                            {% if perms.GestionDocumental.delete_consecutivoordenestrabajo and consecutivo.estado %}
                                                               <a class="fad fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ consecutivo.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ consecutivo.id }}, true)" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
                                                             {% endif %}
-                                                            {% if perms.GestionDocumental.add_ordenestrabajo  and consecutivo.estado %}
+                                                            {% if perms.GestionDocumental.add_consecutivoordenestrabajo  and consecutivo.estado %}
                                                               <a class="fad fa-2x fad fa-retweet" href="javascript:void(0);" onclick="abrirModalCrear('{% url 'GestionDocumental:consecutivo-ordenestrabajo-crear' consecutivo.id%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Reutilizar"></a>
                                                             {% endif %}
                                                         </td>
