EVA-241 refactor: Se modifica el template Index para que cuando se cree el permiso laboral se muestre la etiqueta "En Proceso" en la columna correspondiente al empleado

--- a/TalentoHumano/templates/TalentoHumano/PermisosLaborales/index.html
+++ b/TalentoHumano/templates/TalentoHumano/PermisosLaborales/index.html
@@ -78,7 +78,7 @@
                                                     <td>{{ permiso.motivo_editar }}</td>
                                                     <td class="text-center">
                                                         {% if permiso.estado_empleado %}
-                                                            <span class="badge badge-primary">Activo</span>
+                                                            <span class="badge badge-primary">En Proceso</span>
                                                         {% else %}
                                                             <span class="badge badge-secondary">Anulado</span>
                                                         {% endif %}
