EVA-249 refactor: Se modifica la estructura del código en el Js de reportes de eficiencia, ordenándolo, cambiando el nombre de las variables y funciones de acuerdo a la guía de estilos para Js.
feat: se hace uso del getJson para el envió del rango de fechas a través de la url al view de reportes de eficiencia de la grafica.

 refactor: Se elimina la función creada en el Js de funcionesgenerales.

 refactor: Se usa el label de la enumeraciones para los estados de las solicitudes en el index de solicitudes de aprobación.

--- a/GestionActividades/templates/GestionActividades/AprobacionActividades/index.html
+++ b/GestionActividades/templates/GestionActividades/AprobacionActividades/index.html
@@ -60,13 +60,13 @@
                                                         <td>{{ actividad.fecha_respuesta_solicitud|date:'Y-m-d' }}</td>
                                                         <td>
                                                         {% if actividad.estado == EstadosModificacionActividad.PENDIENTE%}
-                                                            <span class="badge badge-warning">Pendiente</span>
+                                                            <span class="badge badge-warning">{{ EstadosModificacionActividad.PENDIENTE.label }}</span>
                                                         {% endif %}
                                                         {% if actividad.estado == EstadosModificacionActividad.APROBADA%}
-                                                            <span class="badge badge-primary">Aprobada</span>
+                                                            <span class="badge badge-primary">{{ EstadosModificacionActividad.APROBADA.label }}</span>
                                                         {% endif %}
                                                         {% if actividad.estado == EstadosModificacionActividad.RECHAZADA%}
-                                                            <span class="badge badge-danger">Rechazada</span>
+                                                            <span class="badge badge-danger">{{ EstadosModificacionActividad.RECHAZADA.label }}</span>
                                                         {% endif %}
                                                         </td>
                                                         <td>
